Added functionality to manage account

--- a/src/main/resources/public/html/myProfile.html
+++ b/src/main/resources/public/html/myProfile.html
@@ -52,7 +52,7 @@
 			maiores alias consequatur aut perferendis doloribus asperiores repellat.
 			---Section 1.10.33 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
 		    </div>	
-		    <form id="changebioform" action="changebio" method="post">
+		    <form id="changebioform" action="/modifybio" method="post">
 			<textarea id="bioedit" name="bio"></textarea>
 		    </form>
 		</div>
@@ -60,7 +60,7 @@
 		    <h3>Password <input type="submit" form="changepasswordform" value="Change"><button
 			    id="changepasswordbutton" type="button">Change Password</button><button
 				 id="cancelchangepasswordbutton" type="button">Cancel</button></h3>
-		    <form id="changepasswordform" action="changepassword.php(?)">
+		    <form id="changepasswordform" action="/changepassword" method="post">
 			<div class="formcontent">
 			    <div class="textbox">
 				<label>Current Password</label><br>
