--- a/src/main/resources/public/html/profile.html
+++ b/src/main/resources/public/html/profile.html
@@ -1,5 +1,5 @@
 <html>
-    <head></head>
-    <body></body>
+    <head id="head"></head>
+    <body id="body"></body>
     <script src="../js/profile.js"></script>
 </html>
