Added index bar functionality

--- a/src/main/resources/public/html/main.html
+++ b/src/main/resources/public/html/main.html
@@ -9,7 +9,6 @@
 	    <img src="../banner1.png">
 	</header>
 	<nav>
-	    <script src="../js/navbar.js"></script>
 	</nav>
 
 	<div id="page">
@@ -56,10 +55,14 @@
 		    </tbody>
 		</table>
 -->
-		<script type="text/javascript" src="../js/postUnit_main.js">
 
 		</script>
 	    </div>
+	    <div id="indexbar">
+	    </div>
 	</div>
     </body>
+    <script type="text/javascript" src="../js/indexbar.js"></script>
+    <script type="text/javascript" src="../js/postUnit_main.js"></script>
+    <script src="../js/navbar.js"></script>
 </html>
