Added html related items

--- a/documentation/html/inherits.html
+++ b/documentation/html/inherits.html
@@ -93,20 +93,20 @@ $(function() {
 <map name="team8_8social_8Session" id="team8_8social_8Session">
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_7.png" border="0" alt="" usemap="#team8_8tests_8TestAccountCreation"/>
-<map name="team8_8tests_8TestAccountCreation" id="team8_8tests_8TestAccountCreation">
+<tr><td><img src="inherit_graph_7.png" border="0" alt="" usemap="#TestAccountCreation"/>
+<map name="TestAccountCreation" id="TestAccountCreation">
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" alt="" usemap="#team8_8tests_8TestAccountManagement"/>
-<map name="team8_8tests_8TestAccountManagement" id="team8_8tests_8TestAccountManagement">
+<tr><td><img src="inherit_graph_8.png" border="0" alt="" usemap="#TestAccountManagement"/>
+<map name="TestAccountManagement" id="TestAccountManagement">
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_9.png" border="0" alt="" usemap="#team8_8tests_8TestAdminFunctionalities"/>
-<map name="team8_8tests_8TestAdminFunctionalities" id="team8_8tests_8TestAdminFunctionalities">
+<tr><td><img src="inherit_graph_9.png" border="0" alt="" usemap="#TestAdminFunctionalities"/>
+<map name="TestAdminFunctionalities" id="TestAdminFunctionalities">
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_10.png" border="0" alt="" usemap="#team8_8tests_8TestPost"/>
-<map name="team8_8tests_8TestPost" id="team8_8tests_8TestPost">
+<tr><td><img src="inherit_graph_10.png" border="0" alt="" usemap="#TestPost"/>
+<map name="TestPost" id="TestPost">
 </map>
 </td></tr>
 </table>
